--- a/index.html
+++ b/index.html
@@ -24,16 +24,23 @@
       box-shadow: 0px 0px 20px rgba(0,255,255,0.5);
     }
     .profile-pic {
-      width: 120px;
-      height: 120px;
+      width: 200px;
+      height: 200px;
       border-radius: 50%;
-      background: #333;
-      margin: auto;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #bbb;
-      font-size: 14px;
+      margin: 0 auto 20px;
+      overflow: hidden;
+      border: 3px solid cyan;
+      transition: transform 0.3s ease;
+    }
+    .profile-pic:hover {
+      transform: scale(1.05);
+      cursor: pointer;
+    }
+    .profile-pic img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: top;
     }
     h1 {
       color: cyan;
@@ -79,7 +86,13 @@
 </head>
 <body>
   <div class="card">
-    <div class="profile-pic">Your Photo</div>
+    <!-- الصورة في الأعلى وتفتح عند الضغط -->
+    <a href="me.jpg" target="_blank">
+      <div class="profile-pic">
+        <img src="me.jpg" alt="ENG Mohamed Shaban">
+      </div>
+    </a>
+
     <h1>ENG Mohamed Shaban</h1>
     <div class="typing">Mechanical Engineer</div>
 
